# elite-agentic-pipeline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PIPELINE_GUIDE.md  PIPELINE_SUMMARY.md  README.md  pyproject.toml
foodcart-saas/src/backend/: .ci-feedback.json  .vercelignore  Dockerfile  bandit-report.json  coverage.json  debug_contract.db  pyproject.toml  requirements.txt  test_contract.db  tmp_repro.db
foodcart-saas/src/backend/alembic/: env.py
foodcart-saas/src/backend/alembic/versions/: 20250621_initial_freelancer.py  20250624_foodcart_cycle1.py  20250625_add_site_brand_colors.py  20250626_add_paddle_billing_and_domain_fields.py  20250626a_add_paddle_billing_fields.py  20250626b_add_custom_domain_fields.py  20250627_add_enum_check_constraints.py  20250628_add_uploaded_images.py  60f1b16b2c74_publish_existing_sites.py  cb3ba1674f53_add_clerk_id_to_users.py
foodcart-saas/src/backend/src/: main.py
foodcart-saas/src/backend/src/app/: __init__.py  audit.py  config.py  dependencies.py  exceptions.py  features.py  observability.py  schemas_foodcart.py  security.py
foodcart-saas/src/backend/src/app/auth/: clerk.py
foodcart-saas/src/backend/src/app/routers/: auth.py  billing.py  clients.py  domains.py  invoices.py  projects.py  telemetry.py  time_entries.py  webhooks.py
foodcart-saas/src/backend/src/app/services/: domain_purchase.py  domain_service.py  paddle_service.py  registrar_service.py
foodcart-saas/src/backend/src/domain/: entities.py  value_objects.py
foodcart-saas/src/backend/src/domain/services/: foodcart.py  invoice.py  time_entry.py
foodcart-saas/src/backend/src/infrastructure/: database.py  models.py  repositories.py  storage.py
foodcart-saas/src/backend/src/infrastructure/adapters/: google_places.py
foodcart-saas/src/backend/src/infrastructure/llm/: __init__.py  (+3 more)
foodcart-saas/src/backend/tests/: conftest.py  test_auth.py  test_health.py  test_idempotency.py  test_invoices.py  test_observability.py  test_rate_limits.py  test_slo_check.py  test_telemetry.py  test_time_entries.py
foodcart-saas/src/backend/tests/contracts/: test_foodcart_contract.py
foodcart-saas/src/backend/tests/foodcart/: conftest.py  test_ai.py  test_ai_guardrails.py  test_custom_domain.py  test_domain_foodcart.py  test_edge_cases.py  test_google_places.py  test_hours.py  test_ingestion.py  test_llm_bedrock.py  test_llm_gemini.py  test_onboarding.py  test_photo_observability.py  test_public.py  test_revisions.py  test_security.py  test_sites_content.py  test_tenant_isolation.py  test_tenant_isolation_extended.py  test_uploads.py  test_vision.py
foodcart-saas/src/backend/tests/scripts/: test_set_canary.py
(+755 files in other folders)
