[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elite-agentic-pipeline"
version = "0.1.0"
description = "Developer tooling for the Elite Agentic SDLC Pipeline"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
exclude = ["pipeline/platform/scaffold"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["pipeline/tests"]
pythonpath = ["pipeline"]
