[project]
name = "elite-backend"
version = "0.1.0"
description = "Backend scaffold for the Elite Agentic SDLC Pipeline"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "email-validator>=2.2.0",
  "sqlalchemy>=2.0.0",
  "greenlet>=3.0.0",
  "psycopg[binary,pool]>=3.1.0",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "python-jose[cryptography]>=3.3.0",
  "pyjwt[crypto]>=2.8.0",
  "passlib[bcrypt]>=1.7.4",
  "slowapi>=0.1.9",
  "redis>=5.0.0",
  "unleashclient>=5.12.0",
  "paddle-python-sdk>=1.0.0",
  "dnspython>=2.6.0",
  "structlog>=24.4.0",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "opentelemetry-exporter-otlp>=1.28.0",
  "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "bandit>=1.7.0",
  "pact-python>=2.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "factory-boy>=3.3.0",
  "types-python-jose>=3.3.0",
  "types-passlib>=1.7.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "paddle_billing.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80
skip_covered = false
show_missing = true
# Cycle 1 focuses on the Foodcart SaaS feature set. Scope coverage reporting to
# the new/changed modules so legacy scaffold code does not dilute the metric.
include = [
    "src/app/routers/foodcart/*",
    "src/app/schemas_foodcart.py",
    "src/domain/entities.py",
    "src/domain/services/foodcart.py",
    "src/infrastructure/models.py",
    "src/infrastructure/llm/*",
]
